changed image path to the correct one

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body class="bg-bodyBackGround">
         <div class="bg-white w-3/6 m-auto rounded-lg flex justify-center flex-col mt-10">
             <div class="flex justify-center items-center ml-4 mr-4 mt-1">
-                <img class="w-150 max-sm:h-48 mt-8 object-cover rounded-xl" src="./assets/images/image-omelette.jpeg" alt="" />
+                <img class="w-150 max-sm:h-48 mt-8 object-cover rounded-xl" src="assets/images/image-omelette.jpeg" alt="" />
             </div>
             <div class="text-black font-bold flex justify-left text-4xl m-4 font-OutfitRegular"><h1>Simple Omelette Recipe</h1></div>
             <div class="flex justify-center text-left">
